Setting convolver buffer needs to update number of output channels

When the buffer for a ConvolverNode is set, the number of outputs
needs to be reconfigured based on the number of channels in the
response buffer.

BUG=709150
TEST=Convolver/convolver-response-4-chan.html

Review-Url: https://codereview.chromium.org/2799993002
Cr-Commit-Position: refs/heads/master@{#462888}

Former-commit-id: 26d2eea286b0c0ecc81ef2cf52815942d788ce1b